@@ -2,7 +2,9 @@ dvisvgm-0.7.1
 - evaluation of a subset of emTeX specials has been added
 - specials for embedding of raw SVG snippets has been added
 - evaluation of TPIC specials has been added
-- added option -n, --no-fonts (replaces fonts by paths)
+- added option -n, --no-fonts that replaces fonts by paths
+  (enables applications w/o SVG font support to render dvisvgm's output properly)
+- moved defs to top of SVG file to make Firefox's SVG renderer happy
 - fixed bug in color handler
 
 dvisvgm-0.7
